modificado flujo de post de notificacion
